dark mode in prog

--- a/src/dev/scss/framework/layout/_general.scss
+++ b/src/dev/scss/framework/layout/_general.scss
@@ -8,7 +8,7 @@ body {
 
   @extend %az-dark-mode-transition-bg-color;
 
-  &.za-dark-mode {
+  &.js-dark-mode {
     background-color: $text;
 
     * {
