--- a/src/styles/general/_reset.scss
+++ b/src/styles/general/_reset.scss
@@ -311,6 +311,10 @@ select:-moz-focusring {
     text-shadow: 0 0 0 #000;
 }
 
+span {
+    font: inherit;
+}
+
 /*edge input reset*/
 input::-ms-reveal,
 input::-ms-clear {
