--- a/src/styles/vars/_scss-variables.scss
+++ b/src/styles/vars/_scss-variables.scss
@@ -12,6 +12,8 @@ $wide:            2560px;
 // Colors
 $white:           #FFFFFF;
 $black:           #000000;
+$dark:            #020A12;
+$light:           #929eab;
 $green:           #6FBE49;
 $green-light:     #EDFFE2;
 $text:            #2B3641;
