--- a/src/components/ui/Btn/btn.module.scss
+++ b/src/components/ui/Btn/btn.module.scss
@@ -1,10 +1,11 @@
 @import 'styles/general/mixins.scss';
 @import 'styles/vars/_scss-variables.scss';
 
-.footer {
-  position: fixed;
-}
+.btn {
+  position: relative;
 
-.inner {
-  display: block;
+  &::after {
+    content: '';
+    
+  }
 }
