refactored theme mode, started scroll

--- a/src/components/ui/Btn/btn.module.scss
+++ b/src/components/ui/Btn/btn.module.scss
@@ -1,11 +1,10 @@
-@import 'styles/general/mixins.scss';
-@import 'styles/vars/_scss-variables.scss';
+@import "styles/general/mixins.scss";
+@import "styles/vars/_scss-variables.scss";
 
 .btn {
   position: relative;
 
   &::after {
-    content: '';
-    
+    content: "";
   }
 }
