--- a/src/components/Socials/socials.module.scss
+++ b/src/components/Socials/socials.module.scss
@@ -5,7 +5,39 @@
   position: fixed;
   bottom: $gap-tabl;
   right: $gap-tabl;
-  color: $dark;
+
+  /* soc btn toggle circle background */
+  :global(.az-sticky-inner) {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -$gap-mob;
+      right: -$gap-mob;
+      bottom: -$gap-mob;
+      left: -$gap-mob;
+      border-radius: 50%;
+      z-index: -1;
+      opacity: 0;
+      border: 2px solid;
+      transition: transform 0.3s;
+
+      border-color: var(--SOCIAL_ICON_COLOR);
+    }
+
+    .btnToShowSoc {
+      & > svg {
+        color: $dark-blue;
+        color: var(--TEXT_COLOR);
+      }
+    }
+  }
+
+  /* hover effect on container */
+  :global(.az-sticky-container:hover .az-sticky-inner::after) {
+    animation: hoverSocBtn 0.3s $tr-mode-bounce forwards;
+  }
 }
 
 .inner {
@@ -15,16 +47,12 @@
 }
 
 .list {
-  margin-right: 40px;
+  padding: $gap-mob;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  transition-timing-function: $tr-mode-1;
+  transition-timing-function: $tr-mode-default;
   overflow: hidden;
-
-  & > li:not(:last-of-type) {
-    margin-right: 16px;
-  }
 
   & > li {
     opacity: 0;
@@ -40,8 +68,36 @@
   }
 }
 
+.social {
+  position: relative;
+
+  $size: 30px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: calc(50% - (#{$size} / 2));
+    left: calc(50% - #{$size} / 2);
+    width: $size;
+    height: $size;
+    border-radius: 50%;
+    border: 1px solid;
+    z-index: -1;
+    transform: scale(0.5);
+    opacity: 0;
+
+    border-color: var(--SOCIAL_ICON_COLOR);
+  }
+
+  &:hover {
+    &::after {
+      animation: socCircle 0.3s $tr-mode-bounce forwards;
+    }
+  }
+}
+
 .socialsIsShow {
-  animation: showSocialsAnim 1s 0s $tr-mode-1;
+  animation: showSocialsAnim 1s 0s $tr-mode-default;
 
   .inner {
   }
@@ -59,34 +115,7 @@
           transform 0.4s calc(#{$i}s / 10 + 1s);
       }
     }
-    // transition-delay: .5s;
   }
-}
-
-.btnToShowSocials {
-  // position: relative;
-
-  // &::after {
-  //   content: "";
-  //   position: absolute;
-  //   top: -$gap-mob;
-  //   right: -$gap-mob;
-  //   bottom: -$gap-mob;
-  //   left: -$gap-mob;
-  //   // width: 100%;
-  //   // height: 100%;
-  //   border-radius: 50%;
-  //   background-color: $grey;
-  //   z-index: -1;
-  //   opacity: 0;
-  //   transition: opacity 0.4s $tr-mode-1;
-  // }
-
-  // &:hover {
-  //   &::after {
-  //     opacity: 1;
-  //   }
-  // }
 }
 
 @keyframes showSocialsAnim {
@@ -100,5 +129,36 @@
 
   100% {
     transform: translateX(0px);
+  }
+}
+
+@keyframes hoverSocBtn {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  25% {
+    transform: scale(1.3);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes socCircle {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.4);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
   }
 }
