--- a/src/styles/framework/layout/_dark-mode.scss
+++ b/src/styles/framework/layout/_dark-mode.scss
@@ -1,15 +1,11 @@
 .az-page-wrapper {
-  transition: background-color .3s 0s $tr-mode-1;
+  transition: background-color 0.3s 0s $tr-mode-default;
 
-  &.az-dark-mode {
-    background-color: $dark;
+  // &.az-dark-mode {
+  //   background-color: $dark;
 
-    * {
-      color: $light;
-    }
-
-    header {
-      box-shadow: 0 0 16px 0 $light;
-    }
-  }
+  //   * {
+  //     color: $light;
+  //   }
+  // }
 }
