--- a/src/template/Layout/Header/header.module.scss
+++ b/src/template/Layout/Header/header.module.scss
@@ -1,5 +1,5 @@
-@import 'styles/general/mixins.scss';
-@import 'styles/vars/_scss-variables.scss';
+@import "styles/general/mixins.scss";
+@import "styles/vars/_scss-variables.scss";
 
 .header {
   margin-bottom: $gap-mob;
@@ -9,22 +9,11 @@
   top: 0;
   right: 0;
   left: 0;
-  // background-color: $white;
-
-  // &:not() {}
-
-  // @include transition(box-shadow, .4, 0, $tr-mode-1);
-
-  .js-header-name {
-    .is-hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
-  }
+  color: var(--TEXT_COLOR);
+  background-color: var(--BACKGROUND_COLOR);
 }
 
 .scrolling {
-  // box-shadow: 0 0 16px 0 $text;
 }
 
 .inner {
@@ -48,7 +37,7 @@
   top: 50%;
   text-align: center;
   overflow: hidden;
-  transform: translate3d(0,0,0) translateY(-50%);
+  transform: translate3d(0, 0, 0) translateY(-50%);
 
   @include media(">large") {
     right: $header-h-desk;
@@ -70,8 +59,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    
+
     @include media(">large") {
       height: $header-h-desk;
     }
@@ -86,35 +74,24 @@
   }
 
   &__item {
-    position: absolute;
-    margin: auto;
-    // animation-duration: .8s;
-    // animation-delay: .4s;
-    // animation-fill-mode: forwards;
-    // animation-timing-function: $tr-mode-1;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate3d(-50%, -50%, 0);
+    // position: absolute;
+    // margin: auto;
   }
 }
 
 .init {
   :global(.full) {
     animation-name: full;
-
   }
-  // .full {
-  // }
 
   .short {
     animation-name: short;
   }
 }
 
-
 .short {
-  transform: scale(0.1);
-  opacity: 0;
+  // transform: scale(0.1);
+  // opacity: 0;
 }
 
 @keyframes full {
