--- a/src/styles/framework/_general.scss
+++ b/src/styles/framework/_general.scss
@@ -15,6 +15,15 @@ html {
 
 main {
   width: 300vw;
+  background-image: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgb(107, 141, 189) 20%,
+    rgb(95, 109, 173) 40%,
+    rgb(72, 140, 223) 60%,
+    rgba(7, 178, 255, 1) 80%,
+    rgba(2, 60, 71, 1) 100%
+  );
 
   @include media(">large") {
     padding-top: calc(#{$header-h-desk} + #{$gap-mob} * 3);
