--- a/src/styles/framework/_common.scss
+++ b/src/styles/framework/_common.scss
@@ -34,6 +34,7 @@
 .az-page-wrapper {
   // min-height: 150vh;
   // width: 200vw;
+  position: relative;
   height: 100vh;
   width: 100vw;
   color: var(--TEXT_COLOR);
