--- a/src/styles/vars/_css-variables.scss
+++ b/src/styles/vars/_css-variables.scss
@@ -1,1 +1,7 @@
-:root {}
+:root {
+  --text-color: #2b3641;
+  --bg-color: #f0f8ff;
+  --border-color: #929eab;
+  --social-icon-color: #223d5a;
+  --mod-switcher-icon-color: #ffd700;
+}
